2011-11-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el: Move BBDB autoloads.
	(spam-exists-in-BBDB-p): New function to do the BBDB search directly in
	BBDB 2 and 3.
	(spam-check-BBDB): Use it.
	(spam-enter-ham-BBDB): Use it.

2011-11-09  Paul Eggert  <eggert@cs.ucla.edu>

	* smime.el (smime-draw-buffer): Spelling fix.

2011-10-31  Peter Münster  <pmrb@free.fr>  (tiny change)

	* gnus-group.el (gnus-group-get-new-news): New parameter `one-level'
	for scanning exactly one level.
	* gnus-start.el (gnus-get-unread-articles): Ditto.

2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-articles-to-read): Change wording in prompt to be
	slightly clearer.

2011-11-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el: More commentary about setup.

2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-send-and-exit): Document `arg'.

2011-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-open-connection-1): Use tcp-keealive if possible.

2011-11-02  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el: More commentary about `gnus-sync-read' issues.

	* gnus-util.el (gnus-bound-and-true-p): Another comment to explain why
	we don't use `bound-and-true-p'.

2011-11-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-bound-and-true-p): Remove.
	(gnus-bound-and-true-dumber-p): Rename to `gnus-bound-and-true-p'.
	* nnir.el: Use it.
	* nnmairix.el: Use it.

2011-10-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el: Improve docs about CouchDB admins.

	* gnus-util.el (gnus-bound-and-true-dumber-p): Define new, slower, dumb
	function because `gnus-bound-and-true-p' doesn't work well in XEmacs
	for reasons unknown.
	* nnir.el: Use it.
	* nnmairix.el: Use it.

	* nnregistry.el: Remove unnecessary `gnus-registry-enabled' defvar.
	* nnir.el: Ditto.
	* nnmairix.el: Ditto.

	* gnus-registry.el (gnus-registry-enabled): Default to nil.

2011-10-29  Teodor Zlatanov  <tzz@lifelogs.com>
